k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  ports:
    - port: 80
      targetPort: 8080  
      protocol: TCP
  selector:
    app: app
  type: ClusterIP
