k8s/manifests/ingress.yaml
#ingress file for the application
apiVersion: networking.k8s.io/v1  
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.local
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: app
             port:
               number: 80
